fix the spacing for bottom-left for 1780px

--- a/stats-preview-card-component-main/css/styles.css
+++ b/stats-preview-card-component-main/css/styles.css
@@ -66,6 +66,10 @@ img{
     padding: 3rem;
   }
 
+  .stat-head{
+    /* font-size:  0.7rem; */
+    padding: 0 1rem;
+  }
 }
 
 @media (max-width: 900px) {
